[gd_scene load_steps=3 format=3 uid="uid://bj701v1yn1i5t"]

[ext_resource type="Script" path="res://scripts/TitleScreen.gd" id="1_6pxnm"]
[ext_resource type="PackedScene" uid="uid://b1g27s5n6sgok" path="res://scenes/loading_screen.tscn" id="2_s1hea"]

[node name="title_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6pxnm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -266.0
offset_right = 270.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Test Room" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Test Room"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="LoadingScreen" parent="." instance=ExtResource("2_s1hea")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Test Room" to="." method="_on_test_room_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
